# pobo

./: .gitignore  Cargo.toml  components.json  global.scss  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
src/: app.rs  index.tsx  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/derive-macro/: Cargo.toml
src-tauri/derive-macro/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs  store.rs  tray_menu.rs
src-tauri/src/helpers/: mod.rs
src/components/: mod.rs  theme-provider.tsx  timer.rs
src/components/timer/: index.tsx
src/components/ui/: button.rs  button.tsx  input.rs  input.tsx  mod.rs  number_input.rs  progress.tsx  switch.rs
src/i18n/: formatters.ts  i18n-types.ts
src/i18n/en/: index.ts
src/screens/: app-loading.tsx  app.rs  home.rs  main.tsx  mod.rs  start-session.tsx  state.rs
src/screens/home/: index.tsx
src/screens/session/: index.tsx  mod.rs  session-context.tsx  session_counter.rs  state.rs  stopwatch.rs  stopwatch.tsx  timer-input.tsx  timer.rs  timer.tsx  timer_input.rs
src/screens/settings/: mod.rs
src/utils/: mod.rs  state.ts
