[package]
name = "pobo-backend"
version = "0.0.0"
description = "Productivity Booster"
authors = ["uinstinct"]
license = ""
repository = "https://github.com/uinstinct/pobo/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
futures = "0.3"
derive-macro = { path = "derive-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "path-all", "app-all", "notification-all", "system-tray", "shell-open"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
